# projet_PIR

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  profiling.md  pyrightconfig.json
.devcontainer/: devcontainer.json
docs/source/: namosim.agents.rst  namosim.rst
namoros/: .gitignore  README.md  launch_demo.sh  launch_multi.sh  launch_space_conflict.sh  namo_world_template.sdf  package.xml  pyrightconfig.json  requirements.txt  ros_gz_bridge.yaml  settings.json  setup.cfg  setup.py  xacro.sh
namoros/config/: map_walls.stl  namo_world.sdf  namoros_config.yaml  namoros_demo_map.yaml  namoros_multi_map.yaml  nav2_params.yaml  nav2_tiago_params.yaml  space_conflict.yaml
namoros/config/citi_ing_map/: citi_ing.pgm  citi_ing.yaml
namoros/models/differential_robot/: model.config  model.sdf  model.urdf
namoros/models/kobuki_description/launch/: robot_description.launch.py
namoros/models/kobuki_description/urdf/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro  kobuki_standalone.urdf.xacro
namoros/models/movable_box/: aruco.dae  aruco_300.dae  aruco_301.dae  model.config  model.urdf  model_300.urdf  model_300.urdf.xacro  model_301.urdf  model_301.urdf.xacro  movable_box_300.blend  movable_box_301.blend
namoros/models/movable_box/materials/scripts/: aruco_301.material
namoros/models/turtlebot_description/robots/: create_circles_asus_xtion_pro.urdf.xacro  create_circles_kinect.urdf.xacro  kobuki_hexagons_astra.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro  kobuki_hexagons_asus_xtion_pro_offset.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro  kobuki_hexagons_r200.urdf.xacro  roomba_circles_asus_xtion_pro.urdf.xacro
namoros/models/turtlebot_description/urdf/: common_properties.urdf.xacro  turtlebot_common_library.urdf.xacro  turtlebot_gazebo.urdf.xacro
namoros/models/turtlebot_description/urdf/sensors/: astra.urdf.xacro  kinect.urdf.xacro  r200.urdf.xacro  rplidar.urdf.xacro  xtion_pro.urdf.xacro
namoros/models/turtlebot_description/urdf/stacks/: circles.urdf.xacro  hexagons.urdf.xacro
namoros/namoros/: behavior_node.py  bt.py  config.py  data_models.py  movable_obstacle_tracker.py  namo_planner.py  navigator.py  planner_node.py  robot_tracker.py  utils.py
namoros/namoros/behaviors/: TriggerReplan.py  UpdatePlan.py  approach.py  backup.py  clear_global_costmap.py  clear_local_costmap.py  clear_new_movables.py  compute_plan.py  detect_conflicts.py  detect_conflicts_guard.py  execute_plan.py  face_obstacle.py  follow_path.py  grab.py  interrupt_robot.py  new_obstacle_detected.py  pause.py  play_random_sound.py  play_sound.py  redetect_obstacle.py  release.py  replan_guard.py  request_confirm.py  synchronize_planner.py  update_plan_guard.py  wait_for_full_obstacle_detection.py  wait_for_goal_pose.py  wait_for_init_pose.py
namoros/namoros/launch/: launch.multi.py  launch.turtlebot.py
namoros/namoros/scripts/: scenario2sdf.py
namoros/params/: nav2_params_turtlebot_real.yaml
namoros/rviz/: nav2_default_view.rviz
namoros/test/: test_utils.py
namoros_gz/: CMakeLists.txt  package.xml
namoros_gz/src/: Namo.cpp  Namo.hh
namoros_msgs/: CMakeLists.txt  package.xml
namoros_msgs/msg/: AddOrUpdateMovableObstacle.srv  ComputeEvasionPlan.srv  ComputePlan.srv  DetectConflicts.srv  GetEntityPolygon.srv  NamoAction.msg  NamoConflict.msg  NamoEntity.msg  NamoPath.msg  NamoPlan.msg  NamoPose.msg  SimulatePath.srv  SynchronizeState.srv  UpdatePlan.srv
namosim/: .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.py
namosim/namosim/: data_models.py  main.py  report.py  scenario_generation.py  simulator.py  trainer.py
namosim/namosim/agents/: __init__.py  agent.py  models.py  navigation_only_agent.py  ppo_agent.py  rrt_agent.py  rrt_star_agent.py  stilman_2005_agent.py  stilman_configurations.py  stilman_rrt_star_agent.py  teleop_agent.py
namosim/namosim/algorithms/: new_local_opening_check.py  rrt.py  rrt_star.py
namosim/namosim/display/: colors.py  conversions.py  ros2_publisher.py  ros_nodes.py
namosim/namosim/mapgen/: mapgen.py
namosim/namosim/navigation/: action_result.py  basic_actions.py  conflict.py  navigation_path.py  navigation_plan.py
namosim/namosim/scripts/: svg2map.py
namosim/namosim/utils/: collision.py  connectivity.py  conversion.py  utils.py
namosim/namosim/world/: binary_occupancy_grid.py  entity.py  goal.py  obstacle.py  social_topological_occupation_cost_grid.py  world.py
namosim/rviz/: basic_view.rviz
namosim/scripts/: test_e2e.sh  test_types.sh  test_unit.sh
namosim/tests/e2e/: e2e_test.py
namosim/tests/experiments/: experiments_test.py
namosim/tests/unit/: navigation_path_test.py  obstacle_test.py  world_test.py
scripts/: build_docker.sh  test_all.sh  test_e2e.sh  test_unit.sh
