<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>namoros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="david.brown@inria.fr">David Brown</maintainer>
  <license>MIT</license>
  <depend>black</depend>
  <depend>geometry_msgs</depend>
  <depend>grid_map</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>joint_state_publisher</depend>
  <depend>kobuki_ros_interfaces</depend>
  <depend>namoros_msgs</depend>
  <depend>namosim</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>navigation2</depend>
  <depend>py_trees_ros</depend>
  <depend>py_trees</depend>
  <depend>python3-jinja2</depend>
  <depend>python3-numpy</depend>
  <depend>python3-pyright-pip</depend>
  <depend>python3-pytest</depend>
  <depend>python3-pytransform3d-pip</depend>
  <depend>python3-transforms3d</depend>
  <depend>python3-typer</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>rosgraph_msgs</depend>
  <depend>ros_gz</depend>
  <depend>rviz2</depend>
  <depend>topic_tools</depend>
  <depend>xacro</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>