<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>namoros_gz</name>
  <version>0.0.0</version>
  <description>A gazebo plugin for namoros</description>
  <maintainer email="davewbrwn@gmail.com">David Brown</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>ros_gz</depend>
  <depend>gz_transport</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>